@@ -20,7 +20,7 @@
 
 //#define _TEST_STABILITY
 
-static WCHAR SuRun_Beta[]={0x03B2,'1','3',
+static WCHAR SuRun_Beta[]={0x03B2,'1','4',
 #ifdef _TEST_STABILITY
     'a',
 #endif _TEST_STABILITY
